tests/baselines/reference/parserMemberVariableDeclaration5.errors.txt
==== tests/cases/compiler/parserMemberVariableDeclaration5.ts (1 errors) ====
    class C {
      declare Foo;
      ~~~~~~~
!!! parserMemberVariableDeclaration5.ts(2,3): error TS1031: 'declare' modifier cannot appear on a class element.
    }